--- a/01.HTML/ex10회원가입실습.html
+++ b/01.HTML/ex10회원가입실습.html
@@ -7,15 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-
+    <!-- 사용자에게 데이터를 받아줄 공간 -->
     <form accept="#" method="get">
-
+        <!-- 표를 만들어줄 공간: table -->
         <table width="400px">
-         <tr bgcolor="gray" align="left" height="50px">
-                <th colspan="2">Step1: 아이디/비번</th>
+            <!-- Step1 -->
+         <tr bgcolor="gray" height="50px">
+                <th colspan="2" align="left">Step1: 아이디/비번</th>
          </tr>
 
-            <tr height="35px" bgcolor="whitesmoke">
+        <tr height="35px" bgcolor="whitesmoke">
              <td align="right">아이디:</td>
              <td><input type="text" name="ID"></td>
          </tr>
@@ -30,8 +31,7 @@
             <td><input type="password" name="PWCH"></td>
          </tr>
     
-
-    <table width="400px">
+         <!-- Step2 -->
          <tr bgcolor="gray" height="50px">
             <th colspan="2" align="left">Step2: 개인정보</th>
          </tr>
@@ -39,7 +39,8 @@
         <tr height="35px" bgcolor="whitesmoke">
             <td align="right">성별:</td>
             <td>여 <input type="radio" name="gender" value="woman">
-                남 <input type="radio" name="gender" value="man"></td>
+                남 <input type="radio" name="gender" value="man">
+            </td>
         </tr>
    
         <tr height="35px" bgcolor="whitesmoke">
@@ -56,38 +57,40 @@
             <td align="right">생년월일:</td>
             <td> <input type="date"></td>
         </tr>
-    </table>
 
-    <table width="400px">
-        <tr bgcolor="gray" height="50px" align="left">
-            <th colspan="2">Step3: 선호도</th>
+        <!-- Step3 -->
+        <tr bgcolor="gray" height="50px">
+            <th colspan="2" align="left">Step3: 선호도</th>
         </tr>
 
         <tr height="35px" bgcolor="whitesmoke">
             <td align="right">취미:</td>
-            <td>축구 <input type="checkbox" name="hobby" value="soccer">
+            <td>
+                축구 <input type="checkbox" name="hobby" value="soccer">
                 야구 <input type="checkbox" name="hobby" value="baseball">
                 농구 <input type="checkbox" name="hobby" value="basketball">
-        </td>
+            </td>
         </tr>
 
         <tr height="35px" bgcolor="whitesmoke">
             <td align="right">좋아하는 색깔:</td>
             <td><input type="color"></td>
         </tr>
-    </table>
 
-    <table width="400px">
-        <tr bgcolor="gray" height="50px" align="left">
-            <th colspan="2">Step4: 적고 싶은 말</th>
+        <!-- Step4 -->
+        <tr bgcolor="gray" height="50px">
+            <th colspan="2" align="left">Step4: 적고 싶은 말</th>
         </tr>
+
         <tr height="35px" bgcolor="whitesmoke">
-            <td>
+            <td colspan="2">
                 <textarea cols="56" rows="5"></textarea>
             </td>
         </tr>
-        <tr height="35px" bgcolor="whitesmoke" align=center>
-            <td>
+
+        <!-- 제출&초기화 -->
+        <tr height="35px" bgcolor="whitesmoke">
+            <td colspan="2" align=center>
             <input type="submit">
             <input type="reset">
             </td>
