--- a/03.JAVASCRIPT/1.기본문법/ex13배열실습.html
+++ b/03.JAVASCRIPT/1.기본문법/ex13배열실습.html
@@ -19,7 +19,8 @@
         alert(max);
 
         //최대값 바로 출력
-        // Math.max(null,arr);
+        //Math.max(1,2,3)
+        console.log(Math.max.apply(null,arr));
         
 
         // arr.forEach(function(item){
