--- a/02.CSS/ex04그룹선택자.html
+++ b/02.CSS/ex04그룹선택자.html
@@ -8,7 +8,19 @@
     <style>
         /* 그룹 선택자: ,를 표시 */
         h1, p{
-            color: blue;
+            color: blue !important;
+        }
+
+        /* 스타일 시트 가중치
+            전체 선택자: 0
+            태그 선택자: 1
+            클래스 선택자: 10
+            아이디 선택자: 100
+             => 무조건 가장 가중치를 높게 만드는 것: !important;
+        */
+        
+        #h1Title{
+            color: green;
         }
 
         /* h1, #am{
@@ -28,7 +40,7 @@
     </style>
 </head>
 <body>
-    <h1>K강의장 수업</h1>
+    <h1 id="h1Title">K강의장 수업</h1>
     <p>녹화 꼭 해주세요!</p>
     <ul>
         <li id="am">오전 : 선영표</li>
