--- a/03.JAVASCRIPT/2.함수/ex01함수선언.html
+++ b/03.JAVASCRIPT/2.함수/ex01함수선언.html
@@ -23,7 +23,7 @@
         //익명 함수 선언 참조 방식: 호이스팅 지원X
         var minusNum=function(a, b){
             return a-b;
-            //숫자와 문자열을 빼기, 곱하기, 나누기 연산을 할 땐 문자열을 숫자로 바꿔서 연산을 함
+            //숫자와 문자열을 빼기, 곱하기, 나누기 연산을 할 땐 문자열을 숫자로 바꿔서 연산을 함, 근데 문자열 내용이 숫자가 아니고 문자면 NaN나옴~
         }
         console.log(minusNum(num1,num2));
     </script>
