--- a/03.JAVASCRIPT/2.함수/ex03화살표함수.html
+++ b/03.JAVASCRIPT/2.함수/ex03화살표함수.html
@@ -15,7 +15,7 @@
         //단순한 로직일 경우 중괄호 생략 가능
         var print = () => console.log('print');
 
-        //매개변수가 하나밖에 없을 때엔 소괄호 생략 가능
+        //매개변수가 하나밖에 없을 때만 소괄호 생략 가능
         var print1 = num => console.log(num);
 
         print();
